0.3.1
- Improved iphone 5 visualization
- Added icon to menu
- Re worked sub-nav
	- icon color added to differentiate user level
- Remover user level of end-user
- Added more info to install