@@ -1,7 +1,7 @@
 
 			<!-- FIN CONTENIDO ======================================= -->
 
-
+|LF_FOOTER|
 			<!-- footer -->
 			<footer class="footer-cp">
 				<p><a class="white" href="http://www.directadmin.com/">DirectAdmin</a> |LANG_WEB_CP| &copy; 2012 JBMC Software <br>
