@@ -64,21 +64,21 @@
 
                   <ul class="ng-hide svb-right" ng-show="perfil_status">
                     <li>
-                      <a href="#">
+                      <a href="/HTM_PASSWD">
                         <span class="icon-vpn-key sm-b-icon sm-b-icon-key"></span>
-                        <a href="/HTM_PASSWD">|SUB_MENU_PASSWORD|</a>
+                        <span>|SUB_MENU_PASSWORD|</span>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="/CMD_TICKET?sort1=-1">
                         <span class="icon-message sm-b-icon sm-b-icon-message"></span>
-                        <a href="/CMD_TICKET?sort1=-1">|SUB_MENU_MESSAGES|</a>
+                        <span>|SUB_MENU_MESSAGES|</span>
                       </a>
                     </li>
                     <li class="no-bor">
-                      <a href="#">
+                      <a href="/CMD_LOGOUT">
                         <span class="icon-exit-to-app sm-b-icon sm-b-icon-logout"></span>
-                        <a href="/CMD_LOGOUT">|SUB_MENU_LOGOUT|</a>
+                        <span>|SUB_MENU_LOGOUT|</span>
                       </a>
                     </li>
                   </ul>
