@@ -5,3 +5,4 @@
 	- icon color added to differentiate user level
 - Remover user level of end-user
 - Added more info to install
+- Updated footer language
